--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
 body {
-    background-color: seashell;
+    background-color: maroon;
+}
+
+.jumbotron {
+    background-color: black;
+    color: gold;
+}
+
+.card {
+    text-align: center;
 }
